# trae-cli

./: .gitignore  AGENT.MD  CARGO_COMMANDS.md  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION.md  README.md  build.rs
.cargo/: AGENT.MD  config.toml
.githooks/: AGENT.MD  pre-commit
.github/: AGENT.MD
.github/workflows/: ci.yml
.trae/cache/: analyze_02d59b552574e8d02dbde7eb5693906fc1a733f663bcd59ccf62c48dc895d3cd.json  analyze_02f4edfa815577c4b532e86459a169737b92f395c10f4ce7f2fc24c30034874d.json  analyze_0b2e08bc1a00d5f35d33f33cca272c92133b0830bb86a1f8b12b674a56016fcc.json  analyze_8b1180978d1f2ae0fc8e74da09baca49c01d6d6408d875ed603d3ff3658f6963.json  analyze_9c9d20513e3e09e6da5893e3bdb9e4c2f83e70abf9d88dbaf22771134a13418b.json  analyze_aa52d2cb655a96cc0c38a418e4e8ce253ea84ec80b94f47809692e7c147e67ee.json  analyze_d029016e1bcf8b9d815c7fcddf6cd78500fb162df19297847de478a8e5c3869d.json
.trae/metrics/: analyze_9c9d20513e3e09e6da5893e3bdb9e4c2f83e70abf9d88dbaf22771134a13418b.json
scripts/: run_bend_and_save.ps1
src/: AGENT.MD  api.rs  cli.rs  config.rs  lib.rs  main.rs  performance_patterns.rs
src/commands/: analyze.rs  build.rs  build_help.rs  cargo.rs  clippy.rs  daemon.rs  doc.rs  math.rs  mcp.rs  metadata.rs  metrics.rs  mod.rs  paths.rs  release.rs  repair.rs  rustup.rs  security.rs  simulate.rs  test.rs  watch.rs
src/core/: analyzer.rs  cargo.rs  doctor.rs  mod.rs
src/jarvix/: client.rs  mod.rs
src/metrics/: collector.rs  mod.rs
src/utils/: docs.rs  mod.rs  progress.rs  ui.rs
tests/: analyze_cache.rs  integration_jarvix.rs
