[package]
name = "trae-cli"
version = "0.2.0"
edition = "2021"
authors = ["TRAE Team"]
description = "CLI de Rust que ejecuta comandos cargo y reporta resultados a JARVIXSERVER"
repository = "https://github.com/tu-usuario/trae-cli"
license = "MIT"
keywords = ["cli", "cargo", "automation", "rust"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "trae"
path = "src/main.rs"

[[bin]]
name = "server_http"
path = "src/bin/server_http.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
tabled = "0.15"
clap_complete = "4"
walkdir = "2"
regex = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
env_logger = "0.10"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
log = "0.4"
tiny_http = "0.12"
anyhow = "1.0"
which = "6.0"
toml = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
cargo_metadata = "0.17"
rayon = "1.8"
notify = { version = "6", features = ["serde"] }
dirs = "5"
num_cpus = "1.16"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
